# llm-agent-v2

./: .env.sample  .gitignore  .prettierignore  .prettierrc  README.md  iloveyou.md  package-lock.json  package.json  pyproject.toml
src/: cli.py  config.py  index.js  main.py  persona.py  state.py
src/commands/: handler.py
src/db/: persistence.py
src/tools/: __init__.py  execution_engine.py  misc.py  multimodal_input.py  web_tools.py
src/utils/: cloudinary.py  logger.js
