[project]
name = "llm-agent-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloudinary>=1.44.1",
    "google-genai>=1.32.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.6",
    "pymongo>=4.14.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
]
