[project]
name = "llm-agent-v2"
version = "0.1.0"
description = "A CLI-based AI agent built in LangGraph."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "cloudinary>=1.44.1",
    "google-genai>=1.32.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "pymongo>=4.14.1",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "tavily-python>=0.7.11",
]
